--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,10 +1,21 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.row {
+	background-color: rgba(255, 255, 255, 0.4);
+	margin-top: 130px;
+	height: 400px;
+	font-family: 'Cookie', Helvetica, sans-serif;
+
+	
+}
+#catch-phrase {
+	margin-top: 20px;
+}	
 
 
 .wrapper {
-	margin-top: 80px; 
+	//margin-top: 10px; 
 	margin-bottom: 80px;
 }
 
@@ -12,8 +23,14 @@
 	max-width: 380px;
 	padding: 15px 35px 45px; 
 	margin: 0 auto; 
-	background-color: #fff;
-	border: 1px solid rgba(0,0,0,0.1);
+
+	h2 {
+		font-size: 50px;
+	}
+	// background-color: rgba(255, 255, 255, 0.5);
+	//background-image: url('Flower.png');
+
+	//border: 1px solid rgba(0,0,0,0.1);
 
 	.form-signin-heading, .checkbox {
 		margin-bottom: 30px;
