--- a/app/views/emails/new.html.erb
+++ b/app/views/emails/new.html.erb
@@ -1,7 +1,6 @@
-<h1></h1>
 <div class="row">
 	<div class="col-md-4 col-md-offset-2" id="catch-phrase">
-		<%= image_tag("Bind-logo-black-transparent.png", :class => 'img-responsive') %><br>
+		<!--<%= image_tag("Bind-logo-black-transparent.png", :class => 'img-responsive') %><br>-->
 	</div>
 	<div class="col-md-4 col-md-offset-1">
 		<div class="wrapper">
@@ -24,6 +23,3 @@
 		</div>
 	</div>
 </div>
-
-<!-- <%= link_to 'Your articles', controller: 'articles' %> -->
-
