--- a/app/views/emails/show.html.erb
+++ b/app/views/emails/show.html.erb
@@ -1,9 +1,13 @@
-<p>
-	<strong>Email Address: </strong>
-	<%= @email.address %>
-</p>
+<div class="row">
+	<div class="col-md-8 col-md-offset-4">
+		<p>
+			<strong>Email Address: </strong>
+			<%= @email.address %>
+		</p>
 
-<p>
-	<strong>Password: </strong>
-	<%= @email.password %>
-</p>
+		<p>
+			<strong>Password: </strong>
+			<%= @email.password %>
+		</p>
+	</div>
+</div>
