--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,8 +1,10 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 .row {
-	background-color: rgba(255, 255, 255, 0.4);
+	background: rgba(255, 255, 255, 0.6);
+
 	margin-top: 130px;
 	height: 400px;
 	font-family: 'Cookie', Helvetica, sans-serif;
@@ -26,6 +28,7 @@
 
 	h2 {
 		font-size: 50px;
+		color: #f0ad4e;
 	}
 	// background-color: rgba(255, 255, 255, 0.5);
 	//background-image: url('Flower.png');
