--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,9 @@
-<h1>Editing article</h1>
+<div class="row">
+	<div class="col-md-8 col-md-offset-4">
+		<h1>Editing article</h1>
 
-<%= render 'form' %>
- 
-<%= link_to 'Back', articles_path %>
+		<%= render 'form' %>
+		 
+		<%= link_to 'Back', articles_path %>
+	</div>
+</div>
