--- a/app/views/emails/new.html.erb
+++ b/app/views/emails/new.html.erb
@@ -1,25 +1,24 @@
 <div class="row">
-	<div class="col-md-4 col-md-offset-2" id="catch-phrase">
-		<!--<%= image_tag("Bind-logo-black-transparent.png", :class => 'img-responsive') %><br>-->
-	</div>
-	<div class="col-md-4 col-md-offset-1">
+	<div class="col-md-4 col-md-offset-2">
 		<div class="wrapper">
 			<form class="form-signin">
 				<h2 class="form-signin-heading">Let languages become our bonds!</h2>
 				<%= form_for :email, url: emails_path do |f| %>
 				<!-- <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" /> -->
-				<%= f.text_field :address, :type => "text", :class => "form-control", :name => "username", :placeholder => "Email Address", :autofocus => "" %>
+				<%= f.text_field :address, :type => "text", :class =>"form-control", :name => "email-address", :placeholder => "Email Address", :autofocus => "" %>
 				<!-- <input type="password" class="form-control" name="password" placeholder="Password" required="" /> -->
 				<%= f.text_field :password, :type =>"password", :class =>"form-control", :name => "password", :placeholder => "Password", :required => ""%>
 				<!-- <label class="checkbox">
 					<input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
 				</label> -->
-				<!-- <button class="btn btn-lg btn-primary btn-block" type="submit">BOND </button> -->
-				<!--<%= button_to('BOND', :class => "btn btn-lg btn-primary btn-block") %> -->
-				<%= f.submit %>
-				<% end %>
-
+				 <button class="btn btn-lg btn-warning btn-block" type="submit">BOND</button>
+			
+				
+		    	<% end %>
 			</form>
 		</div>
+	</div>
+	<div class="col-md-4 col-md-offset-1" id="catch-phrase">
+		<%= image_tag("Bind-logo-red-transparent.png", :class => 'img-responsive shake shake-constant') %><br>
 	</div>
 </div>
